<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestFragments.EarphoneTestFragment"
    android:background="@color/colorWhite">

    <LinearLayout
        style="@style/Header">

        <ImageView
            android:id="@+id/imageView"
            android:src="@mipmap/schoonenberg_logo"
            style="@style/Header.image"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatearphones"
            android:textColor="@color/SchoonenbergBlue"
            android:gravity="center"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbPhoneBuds"
                style="@style/RadioButton"
                android:text="@string/Scarlett" />

            <RadioButton
                android:id="@+id/rbBeats"
                android:text="@string/beatsheadphones"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/rbJbl"
                android:text="@string/jbl"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/rbSony"
                android:text="@string/sony"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/checkBoxOther"
                android:text="@string/question4Answer3"
                style="@style/RadioButton"/>
        </RadioGroup>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

</FrameLayout>