<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".QuestionnaireFragments.Question4Fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        style="@style/Header">

        <ImageView
            android:id="@+id/imageView"
            app:srcCompat="@mipmap/schoonenberg_logo"
            style="@style/Header.image"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question4"
            android:textColor="@color/SchoonenbergBlue"
            android:textSize="25sp"/>

        <RadioGroup
            android:id="@+id/rbReasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonMedical"
                style="@style/RadioButton"
                android:text="@string/question4Answer1" />

            <RadioButton
                android:id="@+id/radioButtonPersonal"
                style="@style/RadioButton"
                android:text="@string/question4Answer2" />

            <RadioButton
                android:id="@+id/radioButtonOther"
                style="@style/RadioButton"
                android:text="@string/question4Answer3" />
        </RadioGroup>

        <EditText
            android:id="@+id/tbOther"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </LinearLayout>

</FrameLayout>