<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisitStore"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Header">

        <ImageView
            android:id="@+id/imageView"
            app:srcCompat="@mipmap/schoonenberg_logo"
            style="@style/Header.image"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/visitStore"
            android:textColor="@color/SchoonenbergBlue"
            android:gravity="center"
            android:textSize="45sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textWelcomeInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visitInstruction"
            android:textColor="@color/SchoonenbergBlue"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnWebsite"
            style="@style/BackButton"
            android:text="@string/menu" />

        <Button
            android:id="@+id/btnMenu"
            style="@style/NextButton"
            android:text="@string/website" />
    </LinearLayout>

</LinearLayout>