<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Header">

        <ImageView
            android:id="@+id/imageView"
            app:srcCompat="@mipmap/schoonenberg_logo"
            style="@style/Header.image"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/welcome"
            android:textColor="@color/SchoonenbergBlue"
            android:gravity="center"
            android:textSize="45sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textWelcomeInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeText"
            android:textColor="@color/SchoonenbergBlue"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGoToMenu"
            style="@style/MenuButton.start"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>